--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "animejs": "^3.2.0",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
+    "http-proxy-middleware": "^1.0.5",
     "moment": "^2.29.0",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
@@ -42,6 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:3001"
+  }
 }
